AUT-29 added get user permissions swagger documentation
